Add support for displaying TOSCA templates.
Add TOSCA support. No horizon hooks for it exists yet though. Also
refactor the code a little bit so adding more types are easier.

Change-Id: Ie92b22cfdd589926ced697f92956fbc2f22a6bd0

--- a/xstatic/pkg/app_catalog_common/data/action.html
+++ b/xstatic/pkg/app_catalog_common/data/action.html
@@ -44,6 +44,9 @@
         </div>
       </div>
     </div>
+    <div ng-switch-when="tosca">
+      <a ng-class="extraclasses" class="btn btn-default disabled ajax-modal" href="/">Unsupported</a>
+    </div>
     <div ng-switch-default>
       <a ng-switch-when="false" ng-class="extraclasses" class="btn btn-default disabled ajax-modal" href="/">Unsupported</a>
     </div>
